--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -538,6 +538,10 @@
     <item quantity="one">%1$d ano</item>
     <item quantity="other">%1$d anoj</item>
   </plurals>
+  <plurals name="MessageRequestProfileView_members_and_invited">
+    <item quantity="one">%1$d ano (+%2$d invititaj)</item>
+    <item quantity="other">%1$d anoj (+%2$d invititaj)</item>
+  </plurals>
   <plurals name="MessageRequestProfileView_member_of_others">
     <item quantity="one">%d alia</item>
     <item quantity="other">%d aliaj</item>
