--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -582,6 +582,12 @@
     <item quantity="many">%1$d חברי קבוצה</item>
     <item quantity="other">%1$d חברי קבוצה</item>
   </plurals>
+  <plurals name="MessageRequestProfileView_members_and_invited">
+    <item quantity="one">%1$d חבר קבוצה (+%2$d הוזמנו)</item>
+    <item quantity="two">%1$d חבר קבוצה (+%2$d הוזמנו)</item>
+    <item quantity="many">%1$d חברי קבוצה (+%2$d הוזמנו)</item>
+    <item quantity="other">%1$d חברי קבוצה (+%2$d הוזמנו)</item>
+  </plurals>
   <plurals name="MessageRequestProfileView_member_of_others">
     <item quantity="one">אחר %d</item>
     <item quantity="two">%d אחרים</item>
