--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -582,6 +582,12 @@
     <item quantity="many">%1$d členov</item>
     <item quantity="other">%1$d členov</item>
   </plurals>
+  <plurals name="MessageRequestProfileView_members_and_invited">
+    <item quantity="one">%1$d člen (+%2$d pozvaní)</item>
+    <item quantity="few">%1$d člen (+%2$d pozvaní)</item>
+    <item quantity="many">%1$d člen (+%2$d pozvaní)</item>
+    <item quantity="other">%1$d členovi (+%2$d pozvaní)</item>
+  </plurals>
   <plurals name="MessageRequestProfileView_member_of_others">
     <item quantity="one">%d iný</item>
     <item quantity="few">%d iní</item>
