--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2029,10 +2029,12 @@
     <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Lock Signal access with Android screen lock or fingerprint</string>
     <string name="preferences_app_protection__screen_lock_inactivity_timeout">Screen lock inactivity timeout</string>
     <string name="preferences_app_protection__signal_pin">Signal PIN</string>
-    <string name="preferences_app_protection__pin">PIN</string>
-    <string name="preferences_app_protection__change">Change</string>
-    <string name="preferences_app_protection__create">Create</string>
-    <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_to_your_account">Your PIN adds an extra layer of security to your account. You\'ll be asked for it when you register your phone number with Signal. If you forget your PIN, you\'ll be locked out of your account for 7 days.</string>
+    <string name="preferences_app_protection__create_a_pin">Create a PIN</string>
+    <string name="preferences_app_protection__change_your_pin">Change your PIN</string>
+    <string name="preferences_app_protection__your_pin_backs_up_profile_settings_and_preferences">Your PIN backs up profile settings and preferences to save you time when re-registering your account.</string>
+    <string name="preferences_app_protection__registration_lock_adds_and_extra_layer_of_security">Registration Lock adds an extra layer of security to your account. You\'ll be asked for your Signal PIN when you register your phone number with Signal. If you forget your PIN, you\'ll be locked out of your account for 7 days.</string>
+    <string name="preferences_app_protection__failed_to_enable_registration_lock">Failed to enable registration lock.</string>
+    <string name="preferences_app_protection__failed_to_disable_registration_lock">Failed to disable registration lock.</string>
     <string name="AppProtectionPreferenceFragment_none">None</string>
     <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">The Registration Lock PIN is not the same as the SMS verification code you just received. Please enter the PIN you previously configured in the application.</string>
     <string name="registration_activity__registration_lock_pin">Registration Lock PIN</string>
